fixed spacing issues on mobile and PC visuals i.e. scroll bars. fixed closing animation for burger menu. fixed some navigation issues. fixed fonts that were still default fonts

--- a/public/css/index-mobile.css
+++ b/public/css/index-mobile.css
@@ -263,7 +263,7 @@ transform: translate(0,0);
 }
 
 .sectionHeader {
-  font-family: 'Cabin';
+  font-family: var(--font-family-cabin);
   font-size: 48px;
   text-align: center;
   color: #4A4A4A;
@@ -277,9 +277,8 @@ transform: translate(0,0);
   inset -4px -4px 8px 0px #FFFFFF50; */
   height: 600px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-direction: row;
-  overflow-x: scroll;
   overflow-y: hidden;
 }
 .teamHeader{
@@ -287,8 +286,13 @@ transform: translate(0,0);
   width: 150px;
   padding-top: 20px;
   padding: 5px;
-  font-size: 22px;
+  font-size: 32px;
   color: #4a4a4a;
+  font-family: 'Cabin';
+}
+.linksSection .teamHeader {
+  text-align: center;
+  width: 100%;
 }
 .potwContainer{
   width: 95%;
@@ -300,6 +304,8 @@ transform: translate(0,0);
 .potwDesc{
   text-align: center;
   width: 500px;
+  font-size: 22px;
+  font-family: var(--font-family-inter);
 }
 
 .potwMobile {
@@ -312,7 +318,6 @@ transform: translate(0,0);
   justify-content: center;
 }
 .linksSection{
-
 }
 .socialIcon{
   padding: 0px;
@@ -366,10 +371,10 @@ transform: translate(0,0);
 .linkContainer{
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 250px;
+  height: 400px;
   flex-wrap: wrap;
-  padding: 20px;
-  margin: 20px;
+  padding: 5px;
   align-items: center;
 }
 .potwpfp{
@@ -412,8 +417,9 @@ transform: translate(0,0);
   align-items: center;
   justify-content: space-around;
   align-content: center;
-  padding: 30px;
+  padding: 5px;
 }
+
 .potwTeam::-webkit-scrollbar{
   display: none;
 }
@@ -450,6 +456,7 @@ transform: translate(0,0);
   transition: all ease-in-out 0.2s;
   left: -140px;
   z-index: 1;
+  overflow:visible;
 }
 .memberInfoText{
   width: 500px;
@@ -846,11 +853,12 @@ transform: translate(0,0);
    }
    .potwTeam {
     height: 400px;
-    width: 90%;
+    width: 100%;
     padding: 5px;
     transition: all ease-in-out 0.2s;
     z-index: 2;
     padding-bottom: 150px;
+    padding-top: 42px;
     overflow-y: scroll;
    }
    .potwLinksMobile {
@@ -896,7 +904,6 @@ transform: translate(0,0);
   transition: all ease-in-out 0.2s;
   left: calc(50% - 320px);
   z-index: 1;
-
 }
 .memberInfoText{
   width: 320px;
@@ -944,7 +951,36 @@ transform: translate(0,0);
 }
 .potwDesc{
   width: 80%;
+  font-size: 16px;
 }
+.closeBtn{
+  width: 28px;
+  height: 28px;
+  border-radius: 100px;
+  z-index: 2;
+  align-items: left;
+  border:1px solid #222;
+  font: 'Cabin';
+  padding: 5px;
+  cursor: pointer;
+  margin: 5px;
+  display: none;
+  top: -40px;
+  position: relative;
+}
+
+.teamMember:hover {
+  margin-bottom: 175px;
+}
+
+.sectionHeader {
+  font-size: 32px;
+}
+
+.teamHeader{
+  font-size: 24px;
+}
+
 }
 @media screen and (min-width: 1338px) {
   .screen.index-mobile { 
